# litt

./: .clang-format  .gitignore  README.md
examples/: README.md
examples/arduino/: .gitignore  README.md  arduino_litt_ds.h  arduino_litt_io.h
examples/arduino/loopback/: README.md
examples/arduino/passthrough/: README.md  passthrough.ino
examples/arduino/passthrough/readlog/: readlog.cpp
examples/arduino/slave/: Makefile  slave.ino
examples/littP/: CMakeLists.txt  README.md  flash.cfg  flash.sh  lwipopts.h  main.cpp  mk.sh  opentherm.pio  pico_litt_ds.h  pico_litt_io.h  pico_mqtt_client.h  scratch.html  scratch.json
examples/littP/cli/: CMakeLists.txt  littcli.cpp  mqtt2pq.cpp
examples/littZ/: .gitignore  CMakeLists.txt  README.md  bbc_microbit_v2.overlay  littz_e73.overlay  prj_bbc_microbit_v2.conf  prj_littz_e73.conf  prj_xiao_ble.conf  sample.yaml  scratch.txt  xiao_ble.overlay
examples/littZ/boards/ACME/littz_e73/: CMakeLists.txt  Kconfig.defconfig  Kconfig.littz_e73  board.c  board.cmake  board.yml  littz_e73-pinctrl.dtsi  littz_e73.dts  littz_e73.yml  littz_e73_defconfig
examples/littZ/src/: main.cpp  nrf_litt_io.h  zb_zcl_opentherm.c  zb_zcl_opentherm.h  zephyr_litt_ds.h  zephyr_litt_io.h
include/litt/: ch_interface.h  commands.h  dhw_interface.h  ds.h  pid.h  rta.h  scheduler.h  serialization.h  thermostat.h
include/litt/opentherm/: application.h  boiler_interface.h  transport.h
tests/: CMakeLists.txt  e2e_tests.cpp  opentherm_tests.cpp  pid_tests.cpp  test_ds.h  test_io.h  thermostat_tests.cpp
